...
  appStore('com.apple.AppStore'),
  appleStore('com.apple.store.Jolly'),
  barcodeScanner('com.apple.BarcodeScanner'),
  books('com.apple.iBooks'),
  calculator('com.apple.calculator'),
  calendar('com.apple.mobilecal'),
  camera('com.apple.camera'),
  clips('com.apple.clips'),
  clock('com.apple.mobiletimer'),
  compass('com.apple.compass'),
  contacts('com.apple.MobileAddressBook'),
  developer('developer.apple.wwdc-Release'),
  faceTime('com.apple.facetime'),
...
